# homelab

./: .ansible-lint  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .sops.yaml  .yamllint  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  renovate.json
.claude/rules/: ansible.md  argocd-apps.md  docs.md  privacy.md  yaml-extension.md
.claude/skills/k8s-app/: SKILL.md
.claude/skills/sops/: SKILL.md
.github/workflows/: airflow-build.yaml  airflow-ci.yaml  ci.yml  docs.yml
airflow/: .dockerignore  Dockerfile  airflow.cfg  docker-compose.yaml  pyproject.toml
airflow/dags/: hello_homelab.py  t212_hourly.py
airflow/libs/t212/: client.py  db.py  models.py
airflow/tests/: conftest.py  test_dagbag.py  test_dags.py
airflow/tests/dags/: test_t212_hourly.py
airflow/tests/libs/: test_client.py  test_db.py  test_models.py
ansible/: ansible.cfg  k3s-cluster.yml  requirements.yml
ansible/inventory/: hosts.yaml  hosts_secrets.sops.yaml
ansible/inventory/group_vars/: all.sops.yml  all.yml  docker.yml  k3s_cluster.sops.yaml  k3s_cluster.sops.yml  unraid.yml
ansible/playbooks/: docker.yml  hyperion.yml  k3s-cluster.yml  provision.yml
docs/: hooks.py  index.md  secrets.md
docs/ansible/: overview.md  playbooks.md  roles.md
docs/architecture/: networking.md  nodes.md  overview.md  servers.md
docs/assets/: custom.css  header-home-link.js  homelab-rack.html  version.js
docs/kubernetes/: adding-apps.md  argocd.md  namespaces.md
docs/runbooks/: adding-app.md  adding-node.md  adding-server.md  bootstrap.md  deploying-changes.md  k3s-upgrade.md
docs/services/: addons.md  automation.md  databases.md  homelab.md  index.md  ingress.md  media.md  monitoring.md
docs/terraform/: backblaze.md  cloudflare.md  oci.md  overview.md
kubernetes/apps/: values.sops.yaml
kubernetes/bootstrap/: helmfile.yaml
kubernetes/charts/common/: Chart.yaml
terraform/: backend.sops.tfbackend
terraform/adguard/: .terraform.lock.hcl  config.tf  dns_rewrites.tf  filters_allow.tf  filters_deny.tf  main.tf  secrets.sops.yaml  terraform.tf  user_rules.tf
terraform/backblaze/: .terraform.lock.hcl  main.tf  outputs.tf  secrets.sops.yaml  terraform.tf
terraform/cloudflare/: .terraform.lock.hcl  main.tf  outputs.tf  secrets.sops.yaml  terraform.tf
terraform/mariadb/: .terraform.lock.hcl  mysqld_exporter_user.tf  outputs.tf  providers.tf  secrets.sops.yaml  service_databases.tf  terraform.tf
terraform/oci/: .terraform.lock.hcl  main.tf  outputs.tf  secrets.sops.yaml  terraform.tf  variables.tf
terraform/postgres/: .terraform.lock.hcl  outputs.tf  providers.tf  read_only_users.tf  secrets.sops.yaml  service_databases.tf  terraform.tf
(+327 files in other folders)
