[project]
name = "homelab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ansible==14.1.0",
]

[dependency-groups]
dev = [
    "ansible-lint==26.4.0",
    "pre-commit==4.6.0",
    "yamllint==1.38.0",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.6",
]
