[project]
name = "homelab-airflow"
version = "0.0.1"
description = "Airflow DAGs and tooling for homelab"
requires-python = ">=3.14,<3.15"
dependencies = [
    "apache-airflow==3.2.2",
    "apache-airflow-providers-postgres==6.8.0",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.20",
]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest]
addopts = ["-vv"]
testpaths = ["tests"]
